<resources>

    <!-- Common -->
    <string name="app_name">All Asset</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">"  홈  "</string>
    <string name="nate_on">NateOn</string>
    <string name="cyworld">Cyworld</string>
    <string name="eleven_st">11번가</string>
    <string name="melon">Melon</string>
    <string name="tmap">T-map</string>
    <string name="menu_setting">메뉴설정</string>
    <string name="settings">설정하기</string>
    <string name="account_manager">계정관리</string>
    <string name="edit">편집</string>
    <string name="back">이전</string>
    <string name="select">선택</string>
    <string name="svc_cpn_menu_default">메뉴설정에서 MY플래닛LIVE노출여부를 선택 해주세요.</string>
    <string name="menu_setting_des">메뉴설정에서 사용하실 메뉴를 선택하시면 서비스를 이용하실 수 있습니다.</string>
    <string name="category_settings">카테고리가 설정되었습니다.</string>
    <string name="confirm">설정</string>
    <string name="cencel">취소</string>
    <string name="search_result">검색결과</string>
    <string name="search_keyword_null">검색어를 입력하지 않았습니다.</string>
    <string name="progress_msg">Loding...</string>
    <string name="yes">YES</string>
    <string name="no_info">정보없음</string>
    <string name="auth_error">인증에 실패 하였습니다.</string>
    <string name="svc_cpn">SKP 서비스 모아보기</string>
    <string name="my_planet_live">MY 플래닛 LIVE</string>
    <string name="main_expose">Main 노출</string>
    <string name="my_planet_live_expose">MY 플래닛 Live 노출</string>
    <string name="list_view">목록보기</string>
    <string name="account_manager_des">계정로그인 하시면 새쪽지 및 일촌새글 알림을 확인하실 수 있습니다.</string>
    <string name="empty_data">데이터가 존재하지 않습니다.</string>
    <string name="logout">로그아웃</string>
    <string name="login">로그인</string>
    <string name="search">검색</string>
    <string name="view_all">전체보기</string>
    <!-- Preference Menu -->
    <string name="nate_main_key">nate_main_key</string>
    <string name="nate_live_key">nate_live_key</string>
    <string name="cy_main_key">cy_main_key</string>
    <string name="cy_live_key">cy_live_key</string>
    <string name="cyworld_settings">cywrold_settings</string>
    <string name="melon_main_key">melon_main_key</string>
    <string name="melon_live_key">melon_live_key</string>
    <string name="tmap_main_key">tmap_main_key</string>
    <string name="tmap_live_key">tmap_live_key</string>
    <string name="tmap_settings">tmap_settings</string>
    <string name="eleven_main_key">eleven_main_key</string>
    <string name="eleven_live_key">eleven_live_key</string>
    <string name="eleven_settings">eleven_settings</string>

    <!-- Cyworld & NateOn -->
    <string name="msg_alarm">> 쪽지알림</string>
    <string name="new_msg_alarm">> 일촌 새글 알림</string>
    <string name="friend_new_msg">일촌새글</string>
    <string name="photo_album">사진첩</string>
    <string name="my_photo_album">내 사진첩</string>
    <string name="guest_book">방명록</string>
    <string name="my_guest_book">내 방명록</string>
    <string name="msg">메시지</string>
    <string name="friend">친구</string>
    <string name="friend_list">일촌목록</string>
    <string name="mini_home">미니홈피</string>
    <string name="my_mini_home">나의 미니홈피</string>
    <string name="mini_home_name">%1$s의 미니홈피</string>
    <string name="me">나</string>
    <string name="friend_list_search">일촌을 검색해 주세요.</string>
    <string name="name_list_search">이름을 검색해 주세요.</string>
    <string name="new_msg">새 쪽지</string>
    <string name="msg_send">쪽지 전송</string>
    <string name="nate_msg_send">%1$s님께 쪽지를 전송합니다.</string>
    <string name="send_success">전송하였습니다.</string>
    <string name="send_failed">전송실패하였습니다.</string>
    <string name="spinner_eleven_name">정렬순서</string>
    <string name="spinner_cy_name">폴더목록</string>
    <string name="send">전송</string>
    <string name="cy_private">비공개</string>
    <string name="cy_friend_public">일촌공개</string>
    <string name="cy_public">전체공개</string>
    <string name="view_reply">회신</string>
    <string name="item_5">화면에 표시될 방명록 수 : 5</string>
    <string name="item_10">화면에 표시될 방명록 수 : 10</string>
    <string name="item_15">화면에 표시될 방명록 수 : 15</string>

    <!-- Melon -->
    <string name="current_chart">실시간 차트</string>
    <string name="weekly_top">주간TOP100</string>
    <string name="album_top">앨범TOP20</string>
    <string name="music">곡</string>
    <string name="album">앨범</string>
    <string name="artist">아티스트</string>
    <string name="current_music">최신곡</string>
    <string name="current_album">최신앨범</string>
    <string name="music_chart">음악차트</string>
    <string name="top_chart">> Top 차트</string>

    <!-- 11st -->
    <string name="main_eleven_st_default">설정 된 카테고리 상품이 없습니다.</string>
    <string name="product_search_hint">상품을 검색해주세요.</string>
    <string name="product_review_detail">리뷰상세</string>
    <string name="detail_info">상세정보</string>
    <string name="postscipt">후기</string>
    <string name="review">리뷰</string>
    <string name="category_select">카테고리 선택</string>
    <string name="product_satis">상품만족도</string>
    <string name="satisfy">만족도</string>
    <string name="price">판매가</string>
    <string name="delivery">배송</string>
    <string name="postscipt_review">후기/리뷰</string>
    <string name="discount_price">할인모음가</string>
    <string name="discount">할인</string>
    <string name="event">이벤트</string>
    <string name="points">적립포인트</string>
    <string name="point">포인트</string>
    <string name="benefit">혜택</string>
    <string name="credit_benefit">카드무이자할부</string>
    <string name="won">원</string>
    <string name="cnt">건</string>
    <string name="mileage">마일리지</string>
    <string name="seller">판매자</string>
    <string name="of_search_result">의 검색 결과</string>
    <string name="sort_code_cp">인기 순</string>
    <string name="sort_code_a">누적 판매 순</string>
    <string name="sort_code_g">평가 높은 순</string>
    <string name="sort_code_i">후기/리뷰 많은 순</string>
    <string name="sort_code_l">낮은 가격 순</string>
    <string name="sort_code_h">높은 가격 순</string>
    <string name="sort_code_n">최근 등록 순</string>

    <!-- Tmap -->
    <string name="main_tmap_default">설정 된 목적지가 없습니다.</string>
    <string name="not_support_gps">GPS 가 지원되지 않습니다.</string>
    <string name="not_support_network">네트워크가 지원되지 않습니다.</string>
    <string name="enable_gps">GPS 활성화</string>
    <string name="enable_gps_dialog">정확한 서비스를 위해 GPS 를 활성화 하시겠습니까?</string>
    <string name="current_location">최근 목적지</string>
    <string name="current_path_view">최근 경로 보기</string>
    <string name="location_select">목적지 선택</string>
    <string name="detail_path">상세경로</string>
    <string name="map_view">지도보기</string>
    <string name="path_search">경로탐색</string>
    <string name="path_setting">경로 설정</string>
    <string name="set_start_point">출발지 설정</string>
    <string name="set_dest_point">목적지 설정</string>
    <string name="traffic_info">교통정보</string>
    <string name="area_search">주변검색</string>
    <string name="location_select_hint">명칭,주소,전화번호를 입력하세요.</string>
    <string name="expressway">고속도로</string>
    <string name="capital">수도권</string>
    <string name="megalopolis">광역시</string>
    <string name="surr_highway">주변국도</string>
    <string name="tmap_start_location_settings">출발지가 설정되었습니다.</string>
    <string name="tmap_destnation_location_settings">목적지가 설정되었습니다.</string>
    <string name="tmap_not_set_start_location">출발지를 설정해주세요.</string>
    <string name="tmap_not_set_destnation_location">목적지를 설정해주세요.</string>
    <string name="tmap_set_location">설정되었습니다.</string>
    <string name="tmap_set_start_to_desn">설정된 출발지/목적지</string>
    <string name="tmap_not_start_to_desn">설정된 출발지/목적지가 없습니다.</string>
    
    <!-- turn type -->
    <string name="T11">직진</string>
    <string name="T12">좌회전</string>
    <string name="T13">우회전</string>
    <string name="T14">U 턴</string>
    <string name="T15">P 턴</string>
    <string name="T16">8시 방향 좌회전</string>
    <string name="T17">10시 방향 좌회전</string>
    <string name="T18">2시 방향 우회전</string>
    <string name="T19">4시 방향 우회전</string>
    <string name="T101">우측 고속도로 입구</string>
    <string name="T102">죄측 고속도로 입구</string>
    <string name="T103">전방 고속도록 입구</string>
    <string name="T104">우측 고속도로 출구</string>
    <string name="T105">좌측 고속도로 출구</string>
    <string name="T106">전방 고속도로 출구</string>
    <string name="T111">우측 도시고속도로 입구</string>
    <string name="T112">좌측 도시고속도로 입구</string>
    <string name="T113">전방 도시고속도로 입구</string>
    <string name="T114">우측 도시고속도로 출구</string>
    <string name="T115">좌측 도시고속도로 출구</string>
    <string name="T116">전방 도시고속도로 출구</string>
    <string name="T117">우측 방향</string>
    <string name="T118">좌측 방향</string>
    <string name="T119">지하차도</string>
    <string name="T120">고가도로</string>
    <string name="T121">터널</string>
    <string name="T122">교량</string>
    <string name="T123">지하차도 옆</string>
    <string name="T124">고가도로 옆</string>
    <string name="T131">1시 방향</string>
    <string name="T132">2시 방향</string>
    <string name="T133">3시 방향</string>
    <string name="T134">4시 방향</string>
    <string name="T135">5시 방향</string>
    <string name="T136">6시 방향</string>
    <string name="T137">7시 방향</string>
    <string name="T138">8시 방향</string>
    <string name="T139">9시 방향</string>
    <string name="T140">10시 방향</string>
    <string name="T141">11시 방향</string>
    <string name="T142">12시 방향</string>
    <string name="T200">출발지</string>
    <string name="T201">도착지</string>
    <!-- 주변 검색 -->
    <string name="diner">식음료</string>
    <string name="entertainment">놀거리</string>
    <string name="hospital">병원/약국</string>
    <string name="transportation">교통</string>
    <string name="canot_know_location">위치 정보를 찾을 수 없습니다.</string>
    <string name="appear_map">지도보기</string>
    <string name="appear_context">상세보기</string>
	<string name="current_pos">현재위치</string>
	<string name="until_arrived">도착지까지  </string>
	<string name="for_time">소요시간 </string>
</resources>