<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/color_titlebar"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/back_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/back" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/area_search"
                android:textColor="@color/color_title"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/current_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_ly"
        android:text="현위치 : 서울시 중구"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_location"
        android:text="@string/category_select"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/diner"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/diner"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/entertainment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/entertainment"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/hospital"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/hospital"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/life"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/transportation"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>