<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/color_titlebar"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/home_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/home" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/melon"
                android:textColor="@color/color_title"
                android:textSize="18sp" >
            </TextView>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sub_header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_ly"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/chart_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:checkedButton="@+id/current_rb"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/current_rb"
                style="@style/FlatRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/current_chart" />

            <RadioButton
                android:id="@+id/weekly_top_rb"
                style="@style/FlatRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/weekly_top" />

            <RadioButton
                android:id="@+id/album_top_rb"
                style="@style/FlatRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/album_top" />
        </RadioGroup>
    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sub_header_ly" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sub_header_ly"
        android:gravity="center"
        android:text="@string/empty_data" />

</RelativeLayout>