<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/color_titlebar"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/home_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/home" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/melon"
                android:textColor="@color/color_title"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>

    <!-- Search Layout -->

    <RelativeLayout
        android:id="@+id/sub_header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_ly" >

        <EditText
            android:id="@+id/melon_search_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:imeOptions="actionDone"
            android:lines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/edit_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/close" />
    </RelativeLayout>

    <!-- RadioButton Tab Layout -->

    <RelativeLayout
        android:id="@+id/tab_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_header_ly" >

        <RadioGroup
            android:id="@+id/search_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/melon_search_et"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:checkedButton="@+id/music_rb"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/music_rb"
                style="@style/FlatRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/music" />

            <RadioButton
                android:id="@+id/album_rb"
                style="@style/FlatRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/album" />

            <RadioButton
                android:id="@+id/artist_rb"
                style="@style/FlatRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/artist" />
        </RadioGroup>
    </RelativeLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_ly" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_ly"
        android:gravity="center"
        android:text="@string/empty_data" />

</RelativeLayout>