<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Title Layout -->

    <LinearLayout
        android:id="@+id/header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/color_titlebar"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/back_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/back" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/eleven_st"
                android:textColor="@color/color_title"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>

    <!-- Sub Title View Layout -->

    <LinearLayout
        android:id="@+id/sub_header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_ly"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/review_result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_sub_titlebar"
            android:paddingLeft="5dp"
            android:text="@string/postscipt_review" />
    </LinearLayout>

    <!-- Button Tab View Layout -->

    <LinearLayout
        android:id="@+id/tab_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_header_ly"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/postscript_review_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:checkedButton="@+id/postscript_rb"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/postscript_rb"
                style="@style/FlatRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/postscipt" />

            <RadioButton
                android:id="@+id/review_rb"
                style="@style/FlatRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/review" />
        </RadioGroup>
    </LinearLayout>

    <!-- Sub Meny Layout -->

    <LinearLayout
        android:id="@+id/sub_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/photo_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/common_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- ListView Layout -->

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_ly" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_ly"
        android:gravity="center"
        android:text="@string/empty_data" />

</RelativeLayout>