<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/color_titlebar"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/back_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/back" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tmap"
                android:textColor="@color/color_title"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sub_header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_ly"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_sub_titlebar"
            android:paddingLeft="5dp"
            android:text="@string/detail_path" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/path_info_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_header_ly"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_sub_titlebar"
            android:singleLine="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/distance_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_sub_titlebar"
            android:singleLine="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_sub_titlebar"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/appear_type_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/path_info_ly"
        android:background="@color/gray"
        android:checkedButton="@+id/map_rb"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/map_rb"
            style="@style/FlatRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/appear_map"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/context_rb"
            style="@style/FlatRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/appear_context"
            android:textColor="@color/white" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/map_ly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_ly"
        android:layout_below="@id/appear_type_rg" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/context_ly"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appear_type_rg" >

        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/android:empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empty_data" />
    </LinearLayout>

</RelativeLayout>